force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <label>Orçamento</label>
    <nameField>
        <displayFormat>BUDGET-{0000}</displayFormat>
        <label>Nome de Orçamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orçamentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>