force-app/main/default/objects/Budget__c/fields/asset__c.field-meta.xml
<CustomField>
    <fullName>asset__c</fullName>
    <label>Ativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>