force-app/main/default/objects/Budget__c/fields/budgetId__c.field-meta.xml
<CustomField>
    <fullName>budgetId__c</fullName>
    <externalId>true</externalId>
    <label>Id do Orçamento</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>