force-app/main/default/objects/Budget__c/fields/cost__c.field-meta.xml
<CustomField>
    <fullName>cost__c</fullName>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>