force-app/main/default/objects/Budget__c/fields/repairId__c.field-meta.xml
<CustomField>
    <fullName>repairId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reparo</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Orçamentos</relationshipLabel>
    <relationshipName>Or_amentos</relationshipName>
    <type>Lookup</type>
</CustomField>