force-app/main/default/objects/Budget__c/fields/serviceProvider__c.field-meta.xml
<CustomField>
    <fullName>serviceProvider__c</fullName>
    <label>Provedor de Serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>