force-app/main/default/objects/Budget__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WAITING_ANALYSIS</fullName>
                <label>Aguardando Análise</label>
            </value>
            <value>
                <fullName>APPROVED</fullName>
                <label>Aprovado</label>
            </value>
            <value>
                <fullName>DENIED</fullName>
                <label>Rejeitado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>